TP/k8s/httproutes.yaml
# Route "/" -> frontend
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: demo
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: web
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
---
# Route "/api" -> backend (priorité plus haute via plus long prefix)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: demo
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: web
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /metrics
      backendRefs:
        - name: backend
          port: 80
